2010-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* shell.el (shell): Use current-buffer by default if it's already
	a shell mode buffer and its process is dead.
	Suggested by <jemarch@gnu.org>.

2010-11-23  Tassilo Horn  <tassilo@member.fsf.org>

	* mail/emacsbug.el (report-emacs-bug-query-existing-bugs):
	Mention that the keywords should be comma separated.

2010-11-23  Chong Yidong  <cyd@stupidchicken.com>

	* vc/vc.el (vc-merge): Use vc-BACKEND-merge-branch if available.
	Accept optional prefix arg meaning to prompt for a command.
	(vc-update): Use vc-BACKEND-pull if available.  Accept optional
	prefix arg meaning to prompt for a command.
	(vc-pull): Alias for vc-update.

	* vc/vc-bzr.el (vc-bzr-admin-branchconf, vc-bzr-history): New vars.
	(vc-bzr--branch-conf, vc-bzr-async-command, vc-bzr-pull)
	(vc-bzr-merge-branch): New functions, implementing merge-branch
	and pull operations.

2010-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in: Fix up last merge.

	* vc/diff.el (diff-old-temp-file, diff-new-temp-file): Remove.
	(diff-sentinel): Get them as arguments instead.
	(diff-old-file, diff-new-file, diff-extra-args): Remove.
	(diff-file-local-copy, diff-better-file-name): New funs.
	(diff-no-select): Rename from diff-into-buffer.
	Support buffers additionally to files.  Move `buf' arg.  Don't display buf.
	Prefer closures to buffer-local variables.
	(diff): Adjust accordingly.
	(diff-buffer-with-file): Move from files.el.
	* files.el (diff-buffer-with-file): Move to vc/diff.el.
	(diff-buffer-internal): Remove.
	(diff-buffer-buffer): Remove.
	(save-some-buffers-action-alist): Use diff-no-select so as not to guess
	the buffer name used, and so as not to mess up windows and frames.

2010-11-22  Bob Rogers  <rogers-emacs@rgrjr.dyndns.org>

	* files.el: Make revert work with diff-buffer-with-file (bug#7277).
	(diff-buffer-internal): New function extracted from diff-buffer-with-file
	(diff-buffer-with-file): Use it.